@@ -25,6 +25,11 @@ if [ -z "$DEBCONF_REDIR" ]; then
 	export DEBCONF_REDIR
 fi
 
+# The original stdin/stdout/stderr fds are duplicated onto fds
+# DEBCONF_OLD_FD_BASE to DEBCONF_OLD_FD_BASE + 2.
+DEBCONF_OLD_FD_BASE='@DEBCONF_OLD_FD_BASE@'
+export DEBCONF_OLD_FD_BASE
+
 ###############################################################################
 # Commands.
 
