@@ -8,6 +8,8 @@ cdebconf (0.73) UNRELEASED; urgency=low
       + Make cdebconf-gtk-udeb packaging work (still not built by default).
       + Make the Forward button the default widget, so that pressing Enter
         activates it.
+    - Make the value of DEBCONF_OLD_FD_BASE available via the shell
+      confmodule.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 11 Oct 2004 18:42:59 +0100
 
